# tardis

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  stack.yaml  stack_ghc_9.yaml  stack_mtl_2_3.yaml  tardis.cabal
.github/workflows/: haskell-mhs.yml  haskell.yml  microhs.yml
Control/: Seer.hs  SeerRW.hs  Tardis.hs  TardisT.hs
Control/Monad/: Tardis.hs
Control/Monad/Tardis/: Class.hs  Example.hs
Control/Monad/Trans/: Tardis.hs
Control/Seer/: Example.hs
Control/Tardis/: Example.hs  Internal.hs
Control/TardisT/: Example.hs  Internal.hs
src/Control/Monad/: Tardis.hs
src/Control/Monad/Tardis/: Class.hs
src/Control/Monad/Trans/: Tardis.hs
test/: Example.hs  Main.hs
