name:                tardis
version:             0.3.0.0
synopsis:            Bidirectional state monad transformer
homepage:            https://github.com/DanBurton/tardis
bug-reports:         https://github.com/DanBurton/tardis/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.8

description:
  A Tardis is a combination of both a forwards and a backwards
  state transformer, providing two state values that \"travel\"
  in opposite directions.
  .
  You can install this library with the @use-undecidable-instances@ flag,
  but this feature is only provided for toying around.
  If you depend on this library, or install any libraries that
  depend on this library, then you should install this library /without/
  that flag.
  .
  A detailed description of what a Tardis is and how to use it
  can be found in the documentation for Control.Monad.Tardis.

Flag use-undecidable-instances
  description:    Include additional instances for MonadTardis
                  that require some sketchy language extensions
  default:        False

library
  exposed-modules:     Control.Monad.Tardis
                     , Control.Monad.Tardis.Class
                     , Control.Monad.Trans.Tardis


  build-depends:       base==4.*
                     , mtl==2.*

  if flag(use-undecidable-instances)
    cpp-options: -DUSE_UNDECIDABLE_INSTANCES


source-repository head
  type:     git
  location: git://github.com/DanBurton/tardis.git

source-repository this
  type:     git
  location: git://github.com/DanBurton/tardis.git
  tag:      tardis-0.3.0.0

