name:                tardis
version:             0.4.1.0
synopsis:            Bidirectional state monad transformer
homepage:            https://github.com/DanBurton/tardis
bug-reports:         https://github.com/DanBurton/tardis/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.8

description:
  A Tardis is a combination of both a forwards and a backwards
  state transformer, providing two state values that \"travel\"
  in opposite directions.
  .
  A detailed description of what a Tardis is and how to use it
  can be found in the documentation for Control.Monad.Tardis.


library
  exposed-modules:     Control.Monad.Tardis
                     , Control.Monad.Tardis.Class
                     , Control.Monad.Trans.Tardis

  build-depends:       base==4.*
                     , mtl==2.*
                     , mmorph==1.*


source-repository head
  type:     git
  location: git://github.com/DanBurton/tardis.git

source-repository this
  type:     git
  location: git://github.com/DanBurton/tardis.git
  tag:      tardis-0.4.1.0
