name:                tardis
version:             0.4.4.0
synopsis:            Bidirectional state monad transformer
homepage:            https://github.com/DanBurton/tardis
bug-reports:         https://github.com/DanBurton/tardis/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10

description:
  A Tardis is a combination of both a forwards and a backwards
  state transformer, providing two state values that \"travel\"
  in opposite directions.
  .
  A detailed description of what a Tardis is and how to use it
  can be found in the documentation for Control.Monad.Tardis.


library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:     Control.Monad.Tardis
                     , Control.Monad.Tardis.Class
                     , Control.Monad.Trans.Tardis

  build-depends:       base >= 4.8 && < 5
                     , mtl==2.*
                     , mmorph==1.*

test-suite tardis-tests
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tardis
  other-modules:   Example

source-repository head
  type:     git
  location: git://github.com/DanBurton/tardis.git

source-repository this
  type:     git
  location: git://github.com/DanBurton/tardis.git
  tag:      tardis-0.4.1.0
